--- a/quickguide_market_rtings.ipynb
+++ b/quickguide_market_rtings.ipynb
@@ -167,6 +167,168 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6968048a-7dee-4651-9a74-cae7ee5768ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cd60011b-cab3-444d-a8da-e34f2de4f939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "json_path = 'rtings_measurement_data.json'\n",
+    "measurement_dict = {\"measurement\": pd.read_json(json_path, orient='records', lines=True)}\n",
+    "json_path = 'rtings_scores_data.json'\n",
+    "scores_dict = {\"scores\":pd.read_json(json_path, orient='records', lines=True)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d9b7445-322a-4333-be9b-fa02843cc520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>g3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>g3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>g3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>g3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>g3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>x95l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td>x95l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>x95l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>x95l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>x95l</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>231 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0\n",
+       "0      g3\n",
+       "1      g3\n",
+       "2      g3\n",
+       "3      g3\n",
+       "4      g3\n",
+       "..    ...\n",
+       "226  x95l\n",
+       "227  x95l\n",
+       "228  x95l\n",
+       "229  x95l\n",
+       "230  x95l\n",
+       "\n",
+       "[231 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_json(json_path, orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7d18055f-a297-4c20-855a-816acaae22d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'scores':         0\n",
+       " 0      g3\n",
+       " 1      g3\n",
+       " 2      g3\n",
+       " 3      g3\n",
+       " 4      g3\n",
+       " ..    ...\n",
+       " 226  x95l\n",
+       " 227  x95l\n",
+       " 228  x95l\n",
+       " 229  x95l\n",
+       " 230  x95l\n",
+       " \n",
+       " [231 rows x 1 columns]}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_dict"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b2a01dd7-a532-4c45-8bd2-3b738cd47b0b",
    "metadata": {},
