--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -60,7 +60,8 @@
     "from market_research.scraper import Specscraper_l\n",
     "from market_research.scraper import Specscraper_se\n",
     "from market_research.scraper import Specscraper_p, Specscraper_pjp\n",
-    "from market_research.scraper import DataVisualizer"
+    "from market_research.scraper import DataVisualizer\n",
+    "from tools.file import GitMgt"
    ]
   },
   {
@@ -71,6 +72,19 @@
    },
    "source": [
     "# 실행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9b81ab00-c1ae-43a1-b4dd-60f37beb2031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_content = None \n",
+    "git_token = None \n",
+    "git_repo = None \n",
+    "file_name = None "
    ]
   },
   {
@@ -215,6 +229,19 @@
     "scraper_s = Specscraper_s()\n",
     "df = scraper_s.fetch_model_data()\n",
     "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d71d554e-09c8-410b-a4ac-23ecedd43f0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    GitMgt.upload_json_to_github(json_content,  git_token, git_repo, file_name )\n",
+    "except: \n",
+    "    pass"
    ]
   },
   {
@@ -382,6 +409,19 @@
     "scraper_l = Specscraper_l()\n",
     "df = scraper_l.fetch_model_data()\n",
     "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d236e5e-eb0c-4786-9662-4068c1c6967c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    GitMgt.upload_json_to_github(json_content,  git_token, git_repo, file_name )\n",
+    "except: \n",
+    "    pass"
    ]
   },
   {
@@ -557,6 +597,19 @@
     "scraper_se = Specscraper_se()\n",
     "df = scraper_se.fetch_model_data()\n",
     "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8bbaafb-d983-49d4-9325-7e5939503070",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    GitMgt.upload_json_to_github(json_content,  git_token, git_repo, file_name )\n",
+    "except: \n",
+    "    pass"
    ]
   },
   {
