--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -81,10 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_content = None \n",
     "git_token = None \n",
-    "git_repo = None \n",
-    "file_name = None "
+    "git_repo = None "
    ]
   },
   {
@@ -239,7 +237,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(json_content,  git_token, git_repo, file_name )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=\"s_scrape_model_data\" )\n",
     "except: \n",
     "    pass"
    ]
@@ -419,7 +417,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(json_content,  git_token, git_repo, file_name )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=\"l_scrape_model_data\" )\n",
     "except: \n",
     "    pass"
    ]
@@ -607,7 +605,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(json_content,  git_token, git_repo, file_name )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=\"se_scrape_model_data\"  )\n",
     "except: \n",
     "    pass"
    ]
