--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -61,7 +61,7 @@
     "from market_research.scraper import Specscraper_se\n",
     "from market_research.scraper import Specscraper_p, Specscraper_pjp\n",
     "from market_research.scraper import DataVisualizer\n",
-    "from tools.file import GitMgt"
+    "from tools.file import GitMgt\n"
    ]
   },
   {
@@ -83,6 +83,16 @@
    "source": [
     "git_token = None \n",
     "git_repo = None "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e4864b5-ce27-4dc0-9005-e9bf9aa5419f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = datetime.now().strftime(\"%y%m%d\")"
    ]
   },
   {
@@ -237,9 +247,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=\"s_scrape_model_data\" )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"s_scrape_model_data_{today}\" )\n",
     "except: \n",
-    "    pass"
+    "    pass\n",
+    "    from datetime import datetime"
    ]
   },
   {
@@ -417,7 +428,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=\"l_scrape_model_data\" )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"l_scrape_model_data_{today}\" )\n",
     "except: \n",
     "    pass"
    ]
@@ -605,7 +616,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=\"se_scrape_model_data\"  )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"se_scrape_model_data_{today}\" )\n",
     "except: \n",
     "    pass"
    ]
