--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -61,7 +61,8 @@
     "from market_research.scraper import Specscraper_se\n",
     "from market_research.scraper import Specscraper_p, Specscraper_pjp\n",
     "from market_research.scraper import DataVisualizer\n",
-    "from tools.file import GitMgt\n"
+    "from tools.file import GitMgt\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -247,7 +248,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"s_scrape_model_data_{today}\" )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/s_scrape_model_data_{today}\" )\n",
     "except: \n",
     "    pass\n",
     "    from datetime import datetime"
@@ -260,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).price_map()  "
+    "DataVisualizer(df, maker).price_map()  "
    ]
   },
   {
@@ -270,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).heatmap_spec()   "
+    "DataVisualizer(df, maker).heatmap_spec()   "
    ]
   },
   {
@@ -280,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).plot_headertxt()"
+    "DataVisualizer(df, maker).plot_headertxt()"
    ]
   },
   {
@@ -440,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).price_map()  "
+    "DataVisualizer(df, maker).price_map()  "
    ]
   },
   {
@@ -450,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).heatmap_spec()   "
+    "DataVisualizer(df, maker).heatmap_spec()   "
    ]
   },
   {
@@ -460,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).plot_headertxt()"
+    "DataVisualizer(df, maker).plot_headertxt()"
    ]
   },
   {
@@ -628,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).price_map()  "
+    "DataVisualizer(df, maker).price_map()  "
    ]
   },
   {
@@ -638,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).heatmap_spec()   "
+    "DataVisualizer(df, maker).heatmap_spec()   "
    ]
   },
   {
@@ -648,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataVisualizer(df).plot_headertxt()"
+    "DataVisualizer(df, maker).plot_headertxt()"
    ]
   },
   {
