--- a/quickguide_updater.ipynb
+++ b/quickguide_updater.ipynb
@@ -100,14 +100,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cls_scrapers = [Specscraper_s, Specscraper_l, Specscraper_se]\n",
-    "for cls_scraper in cls_scrapers:\n",
+    "cls_scrapers = {Specscraper_s:\"s_scrape_model_data\", Specscraper_l:\"l_scrape_model_data\", Specscraper_se:\"se_scrape_model_data\"}\n",
+    "for cls_scraper, file_name in cls_scrapers.items():\n",
     "    try:\n",
     "        scraper = cls_scraper()\n",
     "        df = scraper.fetch_model_data()\n",
-    "        GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/s_scrape_model_data_{today}\" )\n",
+    "        GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/{file_name}_{today}\" )\n",
     "    except: \n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7710bff7-e5e2-4487-b9d4-c655f66befb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109e4390-64d5-49be-933a-7cc43e78861d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_scrape_model_data"
    ]
   },
   {
