--- a/quickguide_updater.ipynb
+++ b/quickguide_updater.ipynb
@@ -103,7 +103,7 @@
     "cls_scrapers = {Specscraper_s:\"s_scrape_model_data\", Specscraper_l:\"l_scrape_model_data\", Specscraper_se:\"se_scrape_model_data\"}\n",
     "for cls_scraper, file_name in cls_scrapers.items():\n",
     "    try:\n",
-    "        scraper = cls_scraper()\n",
+    "        scraper = cls_scraper(verbose=True)\n",
     "        df = scraper.fetch_model_data()\n",
     "        GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/{file_name}_{today}\" )\n",
     "    except: \n",
