--- a/quickguide_updater.ipynb
+++ b/quickguide_updater.ipynb
@@ -128,6 +128,37 @@
     "except: \n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53515814-c79d-4e5b-9c88-eeb88813b9dd",
+   "metadata": {},
+   "source": [
+    "## 폴더의 파일 읽기, output: dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dfc09fd-f7dc-47f0-9750-250789e25df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owner = None\n",
+    "repo = None\n",
+    "folder_path = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126f29a5-fa25-4d04-8ac7-01becaf6d4c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files_dict = get_github_files_as_dict(owner, repo, folder_path)\n",
+    "print(files_dict)"
+   ]
   }
  ],
  "metadata": {
