--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -269,7 +269,7 @@
    "id": "a497419e-3bcf-4cd5-b384-58e07af3f60a",
    "metadata": {},
    "source": [
-    "## sonyspec_monitor"
+    "## sonyspec_g"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "id": "0cf420de-a957-437b-91eb-ef7a03d87f79",
    "metadata": {},
    "source": [
-    "## lgespec_monitor"
+    "## lgespec_g"
    ]
   },
   {
@@ -647,7 +647,7 @@
    "id": "772b76b3-4174-492d-a272-dc95eedac691",
    "metadata": {},
    "source": [
-    "## sse_spec_monitor"
+    "## sse_spec_g"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "id": "96d53df8-76f5-4a29-a715-7ad08d5e08ca",
    "metadata": {},
    "source": [
-    "## tcl_cspec_tv"
+    "## tcl_spec_tv"
    ]
   },
   {
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "296444ee-3314-4854-8b11-001e5e55cd1d",
+   "id": "26b40348-d461-4b52-9804-faabea09a9a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_dict = get_github_files_as_dict(owner, repo, folder_path)\n",
+    "files_dict = GitMgt.get_github_files_as_dict(owner, repo, folder_path)\n",
     "try:\n",
     "    GitMgt.upload_json_to_github(files_dict,  git_token, git_repo, file_name=f\"stream_data_list\" )\n",
     "except:\n",
